fimlyParser.py
# Generated from fimly.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class fimlyParser ( Parser ):

    grammarFileName = "fimly.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'inicio'", "'leia'", "'escreva'", "'var'", 
                     "'fimalgoritmo'", "'se'", "'entao'", "'senao'", "'fimse'", 
                     "'enquanto'", "'faca'", "'fimenquanto'", "'inteiro'", 
                     "'float'", "'string'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'='", "'('", "':'", "')'", "';'", "'\"'", "','" ]

    symbolicNames = [ "<INVALID>", "INICIO", "LEIA", "ESCREVA", "VAR", "FIM_AL", 
                      "SE", "ENTAO", "SENAO", "FIM_SE", "ENQUANTO", "FACA", 
                      "FIM_ENQ", "INT", "FLOAT", "STRING", "ID", "NUMERO_INTEIRO", 
                      "NUMERO_FLOAT", "CADEIA", "OP_ARIT", "OP_LOGICO", 
                      "OP_COMPARACAO", "IGUAL", "ABRE_PAR", "DOIS_PONTOS", 
                      "FECHA_PAR", "PONTO_VIR", "ASPAS", "VIRG", "WS" ]

    RULE_fimly = 0
    RULE_declaracoes = 1
    RULE_declaracao_var = 2
    RULE_tipo = 3
    RULE_comandos = 4
    RULE_comando = 5
    RULE_comando_ler = 6
    RULE_comando_escrever = 7
    RULE_lista_expressao = 8
    RULE_comando_condicional = 9
    RULE_comando_repeticao = 10
    RULE_comando_atribuicao = 11
    RULE_expressao = 12
    RULE_expressao_aritmetica = 13
    RULE_termo = 14
    RULE_expressao_logica = 15
    RULE_fator_logico = 16
    RULE_expressao_comparacao = 17

    ruleNames =  [ "fimly", "declaracoes", "declaracao_var", "tipo", "comandos", 
                   "comando", "comando_ler", "comando_escrever", "lista_expressao", 
                   "comando_condicional", "comando_repeticao", "comando_atribuicao", 
                   "expressao", "expressao_aritmetica", "termo", "expressao_logica", 
                   "fator_logico", "expressao_comparacao" ]

    EOF = Token.EOF
    INICIO=1
    LEIA=2
    ESCREVA=3
    VAR=4
    FIM_AL=5
    SE=6
    ENTAO=7
    SENAO=8
    FIM_SE=9
    ENQUANTO=10
    FACA=11
    FIM_ENQ=12
    INT=13
    FLOAT=14
    STRING=15
    ID=16
    NUMERO_INTEIRO=17
    NUMERO_FLOAT=18
    CADEIA=19
    OP_ARIT=20
    OP_LOGICO=21
    OP_COMPARACAO=22
    IGUAL=23
    ABRE_PAR=24
    DOIS_PONTOS=25
    FECHA_PAR=26
    PONTO_VIR=27
    ASPAS=28
    VIRG=29
    WS=30

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class FimlyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracoes(self):
            return self.getTypedRuleContext(fimlyParser.DeclaracoesContext,0)


        def INICIO(self):
            return self.getToken(fimlyParser.INICIO, 0)

        def comandos(self):
            return self.getTypedRuleContext(fimlyParser.ComandosContext,0)


        def FIM_AL(self):
            return self.getToken(fimlyParser.FIM_AL, 0)

        def getRuleIndex(self):
            return fimlyParser.RULE_fimly

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFimly" ):
                listener.enterFimly(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFimly" ):
                listener.exitFimly(self)




    def fimly(self):

        localctx = fimlyParser.FimlyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_fimly)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.declaracoes()
            self.state = 37
            self.match(fimlyParser.INICIO)
            self.state = 38
            self.comandos()
            self.state = 39
            self.match(fimlyParser.FIM_AL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracoesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(fimlyParser.VAR, 0)

        def declaracao_var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fimlyParser.Declaracao_varContext)
            else:
                return self.getTypedRuleContext(fimlyParser.Declaracao_varContext,i)


        def getRuleIndex(self):
            return fimlyParser.RULE_declaracoes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracoes" ):
                listener.enterDeclaracoes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracoes" ):
                listener.exitDeclaracoes(self)




    def declaracoes(self):

        localctx = fimlyParser.DeclaracoesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaracoes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(fimlyParser.VAR)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==16:
                self.state = 42
                self.declaracao_var()
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(fimlyParser.ID, 0)

        def DOIS_PONTOS(self):
            return self.getToken(fimlyParser.DOIS_PONTOS, 0)

        def tipo(self):
            return self.getTypedRuleContext(fimlyParser.TipoContext,0)


        def PONTO_VIR(self):
            return self.getToken(fimlyParser.PONTO_VIR, 0)

        def getRuleIndex(self):
            return fimlyParser.RULE_declaracao_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_var" ):
                listener.enterDeclaracao_var(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_var" ):
                listener.exitDeclaracao_var(self)




    def declaracao_var(self):

        localctx = fimlyParser.Declaracao_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaracao_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(fimlyParser.ID)
            self.state = 49
            self.match(fimlyParser.DOIS_PONTOS)
            self.state = 50
            self.tipo()
            self.state = 51
            self.match(fimlyParser.PONTO_VIR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(fimlyParser.INT, 0)

        def FLOAT(self):
            return self.getToken(fimlyParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(fimlyParser.STRING, 0)

        def getRuleIndex(self):
            return fimlyParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)




    def tipo(self):

        localctx = fimlyParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 57344) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fimlyParser.ComandoContext)
            else:
                return self.getTypedRuleContext(fimlyParser.ComandoContext,i)


        def getRuleIndex(self):
            return fimlyParser.RULE_comandos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandos" ):
                listener.enterComandos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandos" ):
                listener.exitComandos(self)




    def comandos(self):

        localctx = fimlyParser.ComandosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_comandos)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 66636) != 0):
                self.state = 55
                self.comando()
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comando_ler(self):
            return self.getTypedRuleContext(fimlyParser.Comando_lerContext,0)


        def comando_escrever(self):
            return self.getTypedRuleContext(fimlyParser.Comando_escreverContext,0)


        def comando_condicional(self):
            return self.getTypedRuleContext(fimlyParser.Comando_condicionalContext,0)


        def comando_repeticao(self):
            return self.getTypedRuleContext(fimlyParser.Comando_repeticaoContext,0)


        def comando_atribuicao(self):
            return self.getTypedRuleContext(fimlyParser.Comando_atribuicaoContext,0)


        def getRuleIndex(self):
            return fimlyParser.RULE_comando

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando" ):
                listener.enterComando(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando" ):
                listener.exitComando(self)




    def comando(self):

        localctx = fimlyParser.ComandoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_comando)
        try:
            self.state = 66
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 61
                self.comando_ler()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 62
                self.comando_escrever()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 63
                self.comando_condicional()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 4)
                self.state = 64
                self.comando_repeticao()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 5)
                self.state = 65
                self.comando_atribuicao()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comando_lerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEIA(self):
            return self.getToken(fimlyParser.LEIA, 0)

        def ABRE_PAR(self):
            return self.getToken(fimlyParser.ABRE_PAR, 0)

        def ID(self):
            return self.getToken(fimlyParser.ID, 0)

        def FECHA_PAR(self):
            return self.getToken(fimlyParser.FECHA_PAR, 0)

        def PONTO_VIR(self):
            return self.getToken(fimlyParser.PONTO_VIR, 0)

        def getRuleIndex(self):
            return fimlyParser.RULE_comando_ler

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando_ler" ):
                listener.enterComando_ler(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando_ler" ):
                listener.exitComando_ler(self)




    def comando_ler(self):

        localctx = fimlyParser.Comando_lerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_comando_ler)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(fimlyParser.LEIA)
            self.state = 69
            self.match(fimlyParser.ABRE_PAR)
            self.state = 70
            self.match(fimlyParser.ID)
            self.state = 71
            self.match(fimlyParser.FECHA_PAR)
            self.state = 72
            self.match(fimlyParser.PONTO_VIR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comando_escreverContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ESCREVA(self):
            return self.getToken(fimlyParser.ESCREVA, 0)

        def ABRE_PAR(self):
            return self.getToken(fimlyParser.ABRE_PAR, 0)

        def FECHA_PAR(self):
            return self.getToken(fimlyParser.FECHA_PAR, 0)

        def PONTO_VIR(self):
            return self.getToken(fimlyParser.PONTO_VIR, 0)

        def lista_expressao(self):
            return self.getTypedRuleContext(fimlyParser.Lista_expressaoContext,0)


        def getRuleIndex(self):
            return fimlyParser.RULE_comando_escrever

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando_escrever" ):
                listener.enterComando_escrever(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando_escrever" ):
                listener.exitComando_escrever(self)




    def comando_escrever(self):

        localctx = fimlyParser.Comando_escreverContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_comando_escrever)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(fimlyParser.ESCREVA)
            self.state = 75
            self.match(fimlyParser.ABRE_PAR)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 17760256) != 0):
                self.state = 76
                self.lista_expressao()


            self.state = 79
            self.match(fimlyParser.FECHA_PAR)
            self.state = 80
            self.match(fimlyParser.PONTO_VIR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Lista_expressaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fimlyParser.ExpressaoContext)
            else:
                return self.getTypedRuleContext(fimlyParser.ExpressaoContext,i)


        def CADEIA(self):
            return self.getToken(fimlyParser.CADEIA, 0)

        def getRuleIndex(self):
            return fimlyParser.RULE_lista_expressao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLista_expressao" ):
                listener.enterLista_expressao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLista_expressao" ):
                listener.exitLista_expressao(self)




    def lista_expressao(self):

        localctx = fimlyParser.Lista_expressaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_lista_expressao)
        self._la = 0 # Token type
        try:
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16, 17, 18, 24]:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.expressao()
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 17235968) != 0):
                    self.state = 83
                    self.expressao()
                    self.state = 88
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.match(fimlyParser.CADEIA)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comando_condicionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SE(self):
            return self.getToken(fimlyParser.SE, 0)

        def ABRE_PAR(self):
            return self.getToken(fimlyParser.ABRE_PAR, 0)

        def expressao(self):
            return self.getTypedRuleContext(fimlyParser.ExpressaoContext,0)


        def FECHA_PAR(self):
            return self.getToken(fimlyParser.FECHA_PAR, 0)

        def ENTAO(self):
            return self.getToken(fimlyParser.ENTAO, 0)

        def comandos(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fimlyParser.ComandosContext)
            else:
                return self.getTypedRuleContext(fimlyParser.ComandosContext,i)


        def FIM_SE(self):
            return self.getToken(fimlyParser.FIM_SE, 0)

        def SENAO(self):
            return self.getToken(fimlyParser.SENAO, 0)

        def getRuleIndex(self):
            return fimlyParser.RULE_comando_condicional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando_condicional" ):
                listener.enterComando_condicional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando_condicional" ):
                listener.exitComando_condicional(self)




    def comando_condicional(self):

        localctx = fimlyParser.Comando_condicionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_comando_condicional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(fimlyParser.SE)
            self.state = 93
            self.match(fimlyParser.ABRE_PAR)
            self.state = 94
            self.expressao()
            self.state = 95
            self.match(fimlyParser.FECHA_PAR)
            self.state = 96
            self.match(fimlyParser.ENTAO)
            self.state = 97
            self.comandos()
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 98
                self.match(fimlyParser.SENAO)
                self.state = 99
                self.comandos()


            self.state = 102
            self.match(fimlyParser.FIM_SE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comando_repeticaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENQUANTO(self):
            return self.getToken(fimlyParser.ENQUANTO, 0)

        def ABRE_PAR(self):
            return self.getToken(fimlyParser.ABRE_PAR, 0)

        def expressao(self):
            return self.getTypedRuleContext(fimlyParser.ExpressaoContext,0)


        def FECHA_PAR(self):
            return self.getToken(fimlyParser.FECHA_PAR, 0)

        def FACA(self):
            return self.getToken(fimlyParser.FACA, 0)

        def comandos(self):
            return self.getTypedRuleContext(fimlyParser.ComandosContext,0)


        def FIM_ENQ(self):
            return self.getToken(fimlyParser.FIM_ENQ, 0)

        def getRuleIndex(self):
            return fimlyParser.RULE_comando_repeticao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando_repeticao" ):
                listener.enterComando_repeticao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando_repeticao" ):
                listener.exitComando_repeticao(self)




    def comando_repeticao(self):

        localctx = fimlyParser.Comando_repeticaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_comando_repeticao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(fimlyParser.ENQUANTO)
            self.state = 105
            self.match(fimlyParser.ABRE_PAR)
            self.state = 106
            self.expressao()
            self.state = 107
            self.match(fimlyParser.FECHA_PAR)
            self.state = 108
            self.match(fimlyParser.FACA)
            self.state = 109
            self.comandos()
            self.state = 110
            self.match(fimlyParser.FIM_ENQ)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comando_atribuicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(fimlyParser.ID, 0)

        def IGUAL(self):
            return self.getToken(fimlyParser.IGUAL, 0)

        def expressao(self):
            return self.getTypedRuleContext(fimlyParser.ExpressaoContext,0)


        def PONTO_VIR(self):
            return self.getToken(fimlyParser.PONTO_VIR, 0)

        def getRuleIndex(self):
            return fimlyParser.RULE_comando_atribuicao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando_atribuicao" ):
                listener.enterComando_atribuicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando_atribuicao" ):
                listener.exitComando_atribuicao(self)




    def comando_atribuicao(self):

        localctx = fimlyParser.Comando_atribuicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_comando_atribuicao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(fimlyParser.ID)
            self.state = 113
            self.match(fimlyParser.IGUAL)
            self.state = 114
            self.expressao()
            self.state = 115
            self.match(fimlyParser.PONTO_VIR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao_logica(self):
            return self.getTypedRuleContext(fimlyParser.Expressao_logicaContext,0)


        def expressao_aritmetica(self):
            return self.getTypedRuleContext(fimlyParser.Expressao_aritmeticaContext,0)


        def getRuleIndex(self):
            return fimlyParser.RULE_expressao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressao" ):
                listener.enterExpressao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressao" ):
                listener.exitExpressao(self)




    def expressao(self):

        localctx = fimlyParser.ExpressaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_expressao)
        try:
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.expressao_logica()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.expressao_aritmetica(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expressao_aritmeticaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ABRE_PAR(self):
            return self.getToken(fimlyParser.ABRE_PAR, 0)

        def expressao_aritmetica(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fimlyParser.Expressao_aritmeticaContext)
            else:
                return self.getTypedRuleContext(fimlyParser.Expressao_aritmeticaContext,i)


        def FECHA_PAR(self):
            return self.getToken(fimlyParser.FECHA_PAR, 0)

        def NUMERO_INTEIRO(self):
            return self.getToken(fimlyParser.NUMERO_INTEIRO, 0)

        def NUMERO_FLOAT(self):
            return self.getToken(fimlyParser.NUMERO_FLOAT, 0)

        def ID(self):
            return self.getToken(fimlyParser.ID, 0)

        def OP_ARIT(self):
            return self.getToken(fimlyParser.OP_ARIT, 0)

        def getRuleIndex(self):
            return fimlyParser.RULE_expressao_aritmetica

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressao_aritmetica" ):
                listener.enterExpressao_aritmetica(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressao_aritmetica" ):
                listener.exitExpressao_aritmetica(self)



    def expressao_aritmetica(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = fimlyParser.Expressao_aritmeticaContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 26
        self.enterRecursionRule(localctx, 26, self.RULE_expressao_aritmetica, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [24]:
                self.state = 122
                self.match(fimlyParser.ABRE_PAR)
                self.state = 123
                self.expressao_aritmetica(0)
                self.state = 124
                self.match(fimlyParser.FECHA_PAR)
                pass
            elif token in [17]:
                self.state = 126
                self.match(fimlyParser.NUMERO_INTEIRO)
                pass
            elif token in [18]:
                self.state = 127
                self.match(fimlyParser.NUMERO_FLOAT)
                pass
            elif token in [16]:
                self.state = 128
                self.match(fimlyParser.ID)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 136
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = fimlyParser.Expressao_aritmeticaContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expressao_aritmetica)
                    self.state = 131
                    if not self.precpred(self._ctx, 5):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                    self.state = 132
                    self.match(fimlyParser.OP_ARIT)
                    self.state = 133
                    self.expressao_aritmetica(6) 
                self.state = 138
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class TermoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMERO_INTEIRO(self):
            return self.getToken(fimlyParser.NUMERO_INTEIRO, 0)

        def NUMERO_FLOAT(self):
            return self.getToken(fimlyParser.NUMERO_FLOAT, 0)

        def ID(self):
            return self.getToken(fimlyParser.ID, 0)
